--- a/.env
+++ b/.env
@@ -1,5 +1,17 @@
 # The ID of your GitHub integration
-INTEGRATION_ID=
+INTEGRATION_ID=Iv1.29684702a03b424f
 
 # Subdomain to use for localtunnel
-SUBDOMAIN=
+SUBDOMAIN=saisankargochhayat
+
+WEBHOOK_PROXY_URL=https://smee.io/4IVaf4C8L3kedBM5
+
+# The ID of your GitHub App
+APP_ID=9354
+WEBHOOK_SECRET=development
+
+# Uncomment this to get verbose logging
+LOG_LEVEL=trace 
+# or `info` to show less
+
+PRIVATE_KEY_PATH=privatekey.pem
